# isekai-comfy-node

./: .gitignore  LICENSE  README.md  __init__.py  check_nodes.py  config.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml  release.yml
nodes/: __init__.py  base.py  claude_node.py  compress_and_save_node.py  compress_image_node.py  concatenate_string_node.py  dynamic_string_node.py  gemini_node.py  load_text_node.py  ollama_summarizer_node.py  openai_node.py  random_from_file_node.py  round_robin_node.py  s3_upload_node.py  tag_selector_node.py  upload_node.py
nodes/image/: __init__.py
nodes/image/blend/: __init__.py  blend_node.py  color_adjust_node.py  color_ramp_node.py  levels_node.py  split_toning_node.py
nodes/image/effects/: __init__.py  blur_node.py  chromatic_aberration_node.py  color_filter_node.py  edge_enhance_node.py  glare_node.py  grain_node.py  invert_node.py  pixelate_node.py  posterize_node.py  sharpen_node.py  vignette_node.py
nodes/image/transform/: __init__.py  crop_node.py  flip_node.py  rotate_node.py  scale_node.py  transform_node.py  translate_node.py
utils/: __init__.py  cloud_llm_client.py  image_utils.py  ollama_client.py  s3_client.py  validation.py
