[project]
name = "isekai-comfy-node"
description = "Upload and compress AI-generated images and enhance your ComfyUI workflows with powerful string utilities and AI integration."
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["# Isekai ComfyUI Custom Node Dependencies", "# These packages are required for the Isekai Upload node to function", "# Image processing", "Pillow>=10.0.0", "# HTTP requests for API communication", "requests>=2.31.0", "# torch and numpy are typically already installed with ComfyUI", "# but listed here for completeness", "torch>=2.0.0", "numpy>=1.24.0"]

[project.urls]
Repository = "https://github.com/isekai-sh/isekai-comfy-node"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/isekai-sh/isekai-comfy-node/wiki"
"Bug Tracker" = "https://github.com/isekai-sh/isekai-comfy-node/issues"

[tool.comfy]
PublisherId = ""
DisplayName = "isekai-comfy-node"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

